[package]
name = "rtp-fanout-server"
version = "0.1.0"
edition = "2021"
authors = ["Ottopia Technologies <dev@ottopia.tech>"]
description = "Lock-free RTP fanout server with session-based gating"
license = "MIT"
repository = "https://github.com/ottopia-tech/rtp-fanout-server"
keywords = ["rtp", "streaming", "webrtc", "fanout", "media"]
categories = ["network-programming", "multimedia"]

[[bin]]
name = "rtp-fanout-server"
path = "src/main.rs"

[lib]
name = "rtp_fanout_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
crossbeam = "0.8"
dashmap = "6.1"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
config = "0.15"
clap = { version = "4.5", features = ["derive"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fanout_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
